[package]
name = "invalid_address"
version = "0.1.0"
authors = ["Jie Yang <jie.yang@nanchao.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
bigdecimal = "0.1.0"
bitcoin = "0.21.0"
